--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "patch-package": "^8.0.0",
     "pg": "8.8.0",
     "postinstall-postinstall": "^2.1.0",
-    "strapi-plugin-config-sync": "^1.1.1",
+    "strapi-plugin-config-sync": "^1.1.1"
   },
   "author": {
     "name": "A Strapi developer"
